# spin-nix

./: README.md  spin
template/: .gitignore  dune-project  flake.nix  release.nix
template/nix/: default.nix  shell.nix
template/nix/overlays/: default.nix  development.nix
template/src/: dune  {{ project_snake }}.ml
template/test/: dune  test.ml
