(lang dune 3.19)

(name {{ project_slug }})
(documentation "https://{{ github_username }}.github.io/{{ project_slug }}/")

(source
  (github {{ github_username }}/{{ project_slug }}))

(license MIT)

(authors
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(maintainers
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(generate_opam_files true)

(package
  (name {{ project_slug }})
  (synopsis "{{ project_description }}")
  (description "\
  {{ project_description }}
  ")
  (depends
    (ocaml (>= 5.2))
    dune
    (alcotest :with-test)
    (odoc :with-doc)))
